#48 update spring and gradle, prepare for java 16